--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "BalancedRandomForestClassifier(random_state=1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,23 +780,13 @@
    "source": [
     "# Resample the training data with the BalancedRandomForestClassifier\n",
     "from imblearn.ensemble import BalancedRandomForestClassifier\n",
-    "brfc = BalancedRandomForestClassifier(n_estimators=100,random_state=1)\n",
+    "brfc = BalancedRandomForestClassifier(n_estimators=100, random_state=1)\n",
     "brfc.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make predictions\n",
-    "y_pred = brfc.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -805,45 +795,20 @@
        "0.7877672625306695"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculated the balanced accuracy score\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
-    "\n",
+    "# make predictions\n",
+    "y_pred = brfc.predict(X_test)\n",
     "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   58,    29],\n",
-       "       [ 1560, 15558]], dtype=int64)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display the confusion matrix\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "cm= confusion_matrix(y_test, y_pred)\n",
-    "cm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -892,12 +857,14 @@
        "Actual low_risk                  1560               15558"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Display the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
     "# Create a DataFrame from the confusion matrix.\n",
     "cm_df = pd.DataFrame(\n",
     "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
@@ -906,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -925,13 +892,12 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "from imblearn.metrics import classification_report_imbalanced\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1027,7 @@
        "EasyEnsembleClassifier(n_estimators=100, random_state=1)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,23 +1035,13 @@
    "source": [
     "# Train the EasyEnsembleClassifier\n",
     "from imblearn.ensemble import EasyEnsembleClassifier\n",
-    "easy=EasyEnsembleClassifier(n_estimators=100,random_state=1)\n",
+    "easy=EasyEnsembleClassifier(n_estimators=100, random_state=1)\n",
     "easy.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make predictions\n",
-    "y_pred = easy.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1094,44 +1050,20 @@
        "0.925427358175101"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculated the balanced accuracy score\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
+    "# make predictions\n",
+    "y_pred = easy.predict(X_test)\n",
     "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   79,     8],\n",
-       "       [  979, 16139]], dtype=int64)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display the confusion matrix\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "cm= confusion_matrix(y_test, y_pred)\n",
-    "cm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1180,12 +1112,15 @@
        "Actual low_risk                   979               16139"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Display the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "# Create a DataFrame from the confusion matrix.\n",
     "cm_df = pd.DataFrame(\n",
     "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
     "cm_df"
@@ -1193,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1147,6 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "from imblearn.metrics import classification_report_imbalanced\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   }
