--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,32 +688,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(51612, 95)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, \n",
-    "                                                    y, \n",
-    "                                                    random_state=1, \n",
-    "                                                    stratify=y)\n",
-    "X_train.shape"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +751,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,13 +761,12 @@
     "from imblearn.over_sampling import RandomOverSampler\n",
     "ros = RandomOverSampler(random_state=1)\n",
     "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
-    "\n",
     "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +775,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,14 +783,13 @@
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
     "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
     "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +808,7 @@
        "0.6249984891886339"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,37 +816,12 @@
    "source": [
     "# Calculated the balanced accuracy score\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
-    "\n",
     "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   52,    35],\n",
-       "       [ 5952, 11166]], dtype=int64)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display the confusion matrix\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "cm= confusion_matrix(y_test, y_pred)\n",
-    "cm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -912,12 +870,16 @@
        "Actual low_risk                  5952               11166"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Display the confusion matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm= confusion_matrix(y_test, y_pred)\n",
+    "\n",
     "# Create a DataFrame from the confusion matrix.\n",
     "cm_df = pd.DataFrame(\n",
     "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
@@ -926,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +929,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,15 +937,15 @@
    "source": [
     "# Resample the training data with SMOTE\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "X_resampled, y_resampled = SMOTE(random_state=1, sampling_strategy='auto').fit_resample(\n",
-    "    X_train, y_train\n",
-    ")\n",
+    "# Instantiate the model\n",
+    "smote = SMOTE(random_state=1)\n",
+    "X_resampled, y_resampled = smote.fit_resample(X_train, y_train)\n",
     "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -992,20 +954,19 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
     "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +975,7 @@
        "0.6512584051472337"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,31 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   56,    31],\n",
-       "       [ 5840, 11278]], dtype=int64)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display the confusion matrix\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "cm= confusion_matrix(y_test, y_pred)\n",
-    "cm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1100,12 +1037,15 @@
        "Actual low_risk                  5840               11278"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Display the confusion matrix\n",
+    "cm= confusion_matrix(y_test, y_pred)\n",
+    "\n",
     "# Create a DataFrame from the confusion matrix.\n",
     "cm_df = pd.DataFrame(\n",
     "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
@@ -1114,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1073,6 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "from imblearn.metrics import classification_report_imbalanced\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
@@ -1156,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1104,7 @@
        "Counter({'high_risk': 260, 'low_risk': 260})"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,76 +1120,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(random_state=78)"
+       "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "model = LogisticRegression(solver='lbfgs', random_state=78)\n",
     "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6512584051472337"
+       "0.5240007493624376"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
+    "y_pred = model.predict(X_test)\n",
     "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   56,    31],\n",
-       "       [ 5840, 11278]], dtype=int64)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display the confusion matrix\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "cm= confusion_matrix(y_test, y_pred)\n",
-    "cm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1281,13 +1194,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual high_risk</th>\n",
-       "      <td>56</td>\n",
-       "      <td>31</td>\n",
+       "      <td>51</td>\n",
+       "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual low_risk</th>\n",
-       "      <td>5840</td>\n",
-       "      <td>11278</td>\n",
+       "      <td>9213</td>\n",
+       "      <td>7905</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1295,16 +1208,18 @@
       ],
       "text/plain": [
        "                  Predicted high_risk  Predicted low_risk\n",
-       "Actual high_risk                   56                  31\n",
-       "Actual low_risk                  5840               11278"
+       "Actual high_risk                   51                  36\n",
+       "Actual low_risk                  9213                7905"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Display the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
     "# Create a DataFrame from the confusion matrix.\n",
     "cm_df = pd.DataFrame(\n",
     "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
@@ -1313,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1322,17 +1237,16 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.64      0.66      0.02      0.65      0.42        87\n",
-      "   low_risk       1.00      0.66      0.64      0.79      0.65      0.42     17118\n",
+      "  high_risk       0.01      0.59      0.46      0.01      0.52      0.27        87\n",
+      "   low_risk       1.00      0.46      0.59      0.63      0.52      0.27     17118\n",
       "\n",
-      "avg / total       0.99      0.66      0.64      0.79      0.65      0.42     17205\n",
+      "avg / total       0.99      0.46      0.59      0.63      0.52      0.27     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "from imblearn.metrics import classification_report_imbalanced\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
@@ -1355,16 +1269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'high_risk': 68460, 'low_risk': 62011})"
+       "Counter({'high_risk': 51351, 'low_risk': 46389})"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,15 +1287,14 @@
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
     "from imblearn.combine import SMOTEENN\n",
-    "\n",
-    "smote_enn = SMOTEENN(random_state=0)\n",
-    "X_resampled, y_resampled = smote_enn.fit_resample(X, y)\n",
+    "smoteenn = SMOTEENN(random_state=1)\n",
+    "X_resampled, y_resampled = smoteenn.fit_resample(X_train, y_train)\n",
     "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1390,67 +1303,41 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
     "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6512584051472337"
+       "0.6163546337591808"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
+    "y_pred = model.predict(X_test)\n",
     "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   56,    31],\n",
-       "       [ 5840, 11278]], dtype=int64)"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display the confusion matrix\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "cm= confusion_matrix(y_test, y_pred)\n",
-    "cm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1481,13 +1368,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual high_risk</th>\n",
-       "      <td>56</td>\n",
-       "      <td>31</td>\n",
+       "      <td>60</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual low_risk</th>\n",
-       "      <td>5840</td>\n",
-       "      <td>11278</td>\n",
+       "      <td>7822</td>\n",
+       "      <td>9296</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1495,16 +1382,19 @@
       ],
       "text/plain": [
        "                  Predicted high_risk  Predicted low_risk\n",
-       "Actual high_risk                   56                  31\n",
-       "Actual low_risk                  5840               11278"
+       "Actual high_risk                   60                  27\n",
+       "Actual low_risk                  7822                9296"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Display the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "# Create a DataFrame from the confusion matrix.\n",
     "cm_df = pd.DataFrame(\n",
     "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
     "cm_df"
@@ -1512,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1521,18 +1411,16 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.64      0.66      0.02      0.65      0.42        87\n",
-      "   low_risk       1.00      0.66      0.64      0.79      0.65      0.42     17118\n",
+      "  high_risk       0.01      0.69      0.54      0.02      0.61      0.38        87\n",
+      "   low_risk       1.00      0.54      0.69      0.70      0.61      0.37     17118\n",
       "\n",
-      "avg / total       0.99      0.66      0.64      0.79      0.65      0.42     17205\n",
+      "avg / total       0.99      0.54      0.69      0.70      0.61      0.37     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "from imblearn.metrics import classification_report_imbalanced\n",
-    "\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   }
